src_old/objects/ProjectAccountServiceAccess__c.object
<CustomObject>
    <description>ProjectAccountServiceAccess</description>
    <fields>
        <fullName>AccessLevel__c</fullName>
        <label>AccessLevel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Access</fullName>
                </value>
                <value>
                    <fullName>No Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>CASESAFEID(ProjectAccount__r.Account__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectAccount__c</fullName>
        <label>Project Account</label>
        <referenceTo>ProjectAccount__c</referenceTo>
        <relationshipLabel>Project Account Service Accesses</relationshipLabel>
        <relationshipName>Project_Account_Service_Accesses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProjectService__c</fullName>
        <label>Project Service</label>
        <referenceTo>ProjectService__c</referenceTo>
        <relationshipLabel>Project Account Service Accesses</relationshipLabel>
        <relationshipName>Project_Account_Service_Accesses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Account Service Accesses</relationshipLabel>
        <relationshipName>Project_Account_Service_Accesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Project Account Service Access</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AA-{00000}</displayFormat>
        <label>ProjectAccountServiceAccess Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Account Service Accesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>